Bug 582037.  When computing intrinsic widths, take the viewport's dimensions into account when it has percent-height descendants.  r=dbaron